--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <!-- <meta http-equiv="refresh" content="2"> -->
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0,  maximum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="style.css">
-    <title><%= title %></title>
+    <title>github Space</title>
     <script defer src="./script.js" type="application/javascript"></script>
-     <script defer src="./app/public/websocketClient.js"></script>
+     
 </head>
 <body>
 
